--- a/angular-app-wons/src/app/app.component.html
+++ b/angular-app-wons/src/app/app.component.html
@@ -14,10 +14,10 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <p class="network-name">pii-szg-network@0.0.9.bna</p>
-        <p class="navbar-brand">angular-app-wons</p>
+        <p class="network-name">pii-szg-network@0.0.3-deploy.0.bna</p>
+       <!-- <p class="navbar-brand"><a [routerLink]="['/']">angular-app-wons - HOME</a></p>-->
       </div>
-      <ul class="nav navbar-nav">
+      <ul class="nav">
         <li class="dropdown active">
             <a class="dropdown-toggle" data-toggle="dropdown">Assets</a>
             <ul class="dropdown-menu scrollable-menu">
@@ -30,7 +30,11 @@
           <a class="dropdown-toggle" data-toggle="dropdown">Participants</a>
           <ul class="dropdown-menu scrollable-menu">
             
-            <li><a [routerLink]="['/Member']">Member</a></li>
+            <li><a [routerLink]="['/Student']">Student</a></li>
+            
+            <li><a [routerLink]="['/Profesor']">Profesor</a></li>
+            
+            <li><a [routerLink]="['/Staff']">Staff</a></li>
             
             <li><a [routerLink]="['/SystemAdministrator']">SystemAdministrator</a></li>
             
@@ -55,7 +59,7 @@
         </ul>
     </li>
       </ul>
+<p class="navbar-brand"><a [routerLink]="['/']">angular-app-wons - HOME</a></p>
     </div>
   </nav>
-  
   <router-outlet></router-outlet>
